--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,3 +36,11 @@
         margin-bottom: 0;
     }
 }
+
+/* RESPONSIVE LINEAR (BONUS) */
+
+@media screen and (min-width:768px) and (max-width:1160px) {
+    .container {
+        width: 100%;
+    }
+}
